--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "concurrently": "^8.2.2",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
